--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "contentful/rich-text": "^3.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.4",
+        "hisorange/browser-detect": "^4.5",
         "intervention/image": "^2.7",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.14",
